--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://iwahid.github.io/sw-react/",
   "name": "sw-react",
   "version": "0.1.0",
   "private": true,
@@ -27,7 +28,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -64,6 +67,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.23.0",
     "eslint-plugin-react-hooks": "^2.1.1",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.0.5"
   }
 }
