--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "4.0.3",
     "redux-devtools-extension": "^2.13.8",
     "typescript": "^4.2.2",
+    "use-media": "^1.4.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
